<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.act.SendCodeActivity">

    <ImageButton
        android:id="@+id/iv_back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="35dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/register_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="40dp"
        android:drawableLeft="@mipmap/start_yellow_enable"
        android:drawablePadding="5dp"
        android:text="@string/send_code_title"
        android:textColor="@color/c_33333"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/send_code_title_phone"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_fix_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:text="@string/send_code_title_phone_fix"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <ImageView
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:src="@mipmap/start_yellow_enable"
        app:layout_constraintBottom_toBottomOf="@+id/tv_fix_phone"
        app:layout_constraintRight_toLeftOf="@+id/tv_fix_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <RelativeLayout
        android:id="@+id/rl_fix_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_content">

        <EditText
            android:id="@+id/td_fix_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="请输入验证码"
            android:inputType="phone"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <TextView
            android:id="@+id/tv_get_re_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="12dp"
            android:textSize="12sp"
            android:layout_alignParentRight="true"
            android:text="@string/send_code_count_time" />

    </RelativeLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/c_cd0014"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_fix_phone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/jump_to_send_code"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginTop="80dp"
        app:cardBackgroundColor="@color/c_cd0014"
        app:cardCornerRadius="23dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_line">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@mipmap/aboutus_enter" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>