<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/iv_back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/register_back"
        android:layout_marginTop="35dp"
        android:background="@android:color/transparent"
        android:layout_marginLeft="12dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/iv_back"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:text="@string/register_title"
        android:drawableLeft="@mipmap/start_yellow_enable"
        android:drawablePadding="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="12dp"
        android:textSize="18sp"
        android:textColor="@color/c_33333"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/ll_86"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/register_86"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入手机号"
            android:background="@null"
            android:inputType="phone"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

    </LinearLayout>

    <View
        android:id="@+id/view_line"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_86"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/c_33333"/>

    <LinearLayout
        android:id="@+id/ll_xy"
        app:layout_constraintTop_toBottomOf="@+id/view_line"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/register_content"
            android:textSize="16sp"
            android:textColor="@color/c_33333"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/jump_to_send_code"
        app:layout_constraintTop_toBottomOf="@+id/ll_xy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="46dp"
        app:cardCornerRadius="23dp"
        android:layout_marginTop="80dp"
        app:cardBackgroundColor="@color/c_cd0014"
        android:layout_height="46dp">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:scaleType="fitXY"
            android:layout_height="wrap_content"
            android:src="@mipmap/aboutus_enter"/>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>